--- a/UI/history.html
+++ b/UI/history.html
@@ -39,16 +39,47 @@
 <div class="body-section">
     <h1 class="float-center">my order history</h1>
     <div class="row  user-dashboard-content">
-        <div class="">
             <div class="col-2">
                 <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-2">
             </div>
-            <div class="col-8">
+            <div class="col-10">
                 <h3> chicken pizza <small>order on:12/9/2016</small></h3>
                 <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
                     The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
                 </p>
             </div>
+    </div>
+    <div class="row  user-dashboard-content">
+        <div class="col-2">
+            <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-2">
+        </div>
+        <div class="col-8">
+            <h3> chicken pizza <small>order on:12/9/2016</small></h3>
+            <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
+                The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
+            </p>
+        </div>
+    </div>
+    <div class="row  user-dashboard-content">
+        <div class="col-2">
+            <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-2">
+        </div>
+        <div class="col-8">
+            <h3> chicken pizza <small>order on:12/9/2016</small></h3>
+            <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
+                The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
+            </p>
+        </div>
+    </div>
+    <div class="row  user-dashboard-content">
+        <div class="col-2">
+            <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-2">
+        </div>
+        <div class="col-8">
+            <h3> chicken pizza <small>order on:12/9/2016</small></h3>
+            <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
+                The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
+            </p>
         </div>
     </div>
 </div>
