--- a/UI/signup.html
+++ b/UI/signup.html
@@ -42,7 +42,7 @@
                     <div>
                         <input type="submit" name="submit"  value="register" id="submit" class="button-white text-white">
                     </div>
-                    <p class="text-white"> already an account please <a href="#">Sign in</a></p>
+                    <p class="text-white"> already an account please <a href="login.html">Sign in</a></p>
                 </form>
             </div>
         </div>
