--- a/UI/adminDashboard.html
+++ b/UI/adminDashboard.html
@@ -40,7 +40,7 @@
     <div class="row userAdmin-dashboard-content">
         <div class="">
                 <!-- the begining of the tables -->
-                <button class="add-item" id="add-food" onclick="addBtn();">add</button>
+               <a href="addfood.html"><button class="add-item" id="add-food">add</button></a>
                 <table id="myTable">
                     <tr class="header">
                         <th style="width:10%;">Image</th>
