--- a/UI/login.html
+++ b/UI/login.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 <!--- the footer section of the app--->
-<div class="footer-section">
+<div class="footer-section2">
     <div class="footer-area">
     </div>
     <div class="copy-right-area">
