--- a/UI/orderlist.html
+++ b/UI/orderlist.html
@@ -45,6 +45,7 @@
                     <th style="width:10%;">Image</th>
                     <th style="width:10%;">Meal</th>
                     <th style="width:10%;">ordered by</th>
+                    <th style="width:10%;">delivery type</th>
                     <th style="width:10%;">price</th>
                     <th style="width:10%;">accept</th>
                     <th style="width:10%;">Decline</th>
@@ -55,6 +56,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>Meats and Rices</td>
                     <td>Jef</td>
+                    <td> delivered</td>
                     <td><small>price:6200ugx</small></td>
                     <td><button id="accept" class="button-success">pending</button></td>
                     <td><button id="Decline" class="button-success">pending</button></td></td>
@@ -64,6 +66,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>Brayan mirez</td>
                     <td>Meat Stew</td>
+                    <td> pick up</td>
                     <td><small>price:900ugx</small></td>
                     <td><button id="accept1" class="button-success">pending</button></td>
                     <td><button id="Decline1" class="button-success">pending</button></td></td>
@@ -73,6 +76,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>Teddy Bobs</td>
                     <td>samussa</td>
+                    <td>delivered</td>
                     <td><small>price:1500ugx</small></td>
                     <td><button id="accept2" class="button-success">pending</button></td>
                     <td><button id="Decline2" class="button-success">pending</button></td></td>
@@ -82,6 +86,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>Benson walk</td>
                     <td>nyama choma</td>
+                    <td>Pick up</td>
                     <td><small>price:3200ugx</small></td>
                     <td><button id="accept3" class="button-success">pending</button></td>
                     <td><button id="Decline3" class="button-success">pending</button></td></td>
@@ -91,6 +96,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>Godwin Walker</td>
                     <td>chicken stew</td>
+                    <td>Delivered</td>
                     <td><small>price:1200ugx</small></td>
                     <td><button id="accept4" class="button-success">pending</button></td>
                     <td><button id="Decline4" class="button-success">pending</button></td></td>
@@ -100,6 +106,7 @@
                     <td><img src="images/davide-cantelli-148407-unsplash.jpg" class="image-circle-3"></td>
                     <td>robert Johns</td>
                     <td>Chicken Pizza</td>
+                    <td>Pickup</td>
                     <td><small>price:1500ugx</small></td>
                     <td><button id="accept5" class="button-success">pending</button></td>
                     <td><button id="Decline5" class="button-success">pending</button></td></td>
