--- a/UI/userDashboard.html
+++ b/UI/userDashboard.html
@@ -47,7 +47,7 @@
                 <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
                     The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
                 </p>
-                <button class="button-sunshine-outline" id="">order now</button>
+                <a href="order.html"><button class="button-sunshine-outline">order now</button></a>
             </div>
         </div>
         <div class="col-2">
@@ -58,7 +58,7 @@
             <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
                 The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
             </p>
-            <button class="button-sunshine-outline">order now</button>
+            <a href="order.html"><button class="button-sunshine-outline">order now</button></a>
         </div>
         <div class="col-2">
             <img src="images/alex-loup-397220-unsplash.jpg" class="img-circle">
@@ -68,39 +68,7 @@
             <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
                 The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. The image below illustrates the box model:
             </p>
-            <button class="button-sunshine-outline" id="order-btn">order now</button>
-        </div>
-    </div>
-    <!----food order modal--->
-    <div class="modal" id="order-modal">
-        <div class="row">
-            <div class="">
-                <div class="column-sm">
-                    <P></P>
-                </div>
-                <div class="column-sm">
-                    <div class="form-area-section">
-                        <h1 class="text-white text-large">place your order now</h1>
-                        <form method="post" action="">
-                            <div>
-                                <label for="location" class="text-white">location</label>
-                                <input type="location" name="location" id="location" class="form-control">
-                            </div>
-                            <div>
-                                <input type="radio" id="self-delivery"
-                                       name="self-delivery" value="self-delivery">
-                                <label for="self-delivery">self delivery</label>
-                                <input type="radio" id="delivered"
-                                       name="delivered" value="delivered">
-                                <label for="delivered">delivered</label>
-                            </div>
-                            <div>
-                                <input type="submit" name="submit"  value="order now" id="submit" class="button-sunshine-outline-order">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+            <a href="order.html"><button class="button-sunshine-outline" id="order-btn">order now</button></a>
         </div>
     </div>
 </div>
