--- a/UI/signup.html
+++ b/UI/signup.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 <!--- the footer section of the app--->
-<div class="footer-section">
+<div class="footer-section2">
     <div class="footer-area">
 
     </div>
