--- a/UI/addfood.html
+++ b/UI/addfood.html
@@ -17,20 +17,23 @@
     <div class="nav-section">
         <div class="row">
             <div class="col-2">
-                <p></p>
+                <p><img src="images/logo-white.png" class="site-logo"></p>
             </div>
-            <div class="col-6">
+            <div class="col-8">
                 <ul>
+                    <li>
+                        <a href="adminDashboard.html" class="">food list</a>
+                    </li>
                     <li>
                         <a href="orderlist.html" class="">orders</a>
                     </li>
                     <li>
-                        <a href="adminDashboard.html" class="active">food</a>
+                        <a href="#" class="">logo out</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-2 user-area">
-                <img src="images/davide-cantelli-148407-unsplash.jpg">
+            <div class="col-1 user-area">
+                <img src="images/davide-cantelli-148407-unsplash.jpg" id="profile-pic">
             </div>
         </div>
 
@@ -71,6 +74,44 @@
                         </div>
                     </form>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- The Modal -->
+<div class="row">
+    <div class="modal" id="profile-modal">
+        <div class="col-4">
+            <P></P>
+        </div>
+        <div class="col-4">
+            <span class="close">&times;</span>
+            <div class="form-area-section">
+                <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-profile">
+                <h1 class="text-white text-large">edit profile</h1>
+                <form method="post" action="">
+                    <div>
+                        <label for="username" class="text-white">username</label>
+                        <input type="text" name="food-name" id="username" class="form-control">
+                    </div>
+                    <div>
+                        <label for="email" class="text-white">E-mail</label>
+                        <input type="text" name="price" id="email" class="form-control">
+                    </div>
+                    <div>
+                        <label for="password" class="text-white">password</label>
+                        <input type="text" name="price" id="password" class="form-control">
+                    </div>
+                    <div>
+                        <label for="profile-image" class="text-white">image</label>
+                        <input type="file" name="food-image" id="profile-image" class="form-control">
+                    </div>
+                    <div>
+                    </div>
+                    <div>
+                        <input type="submit" name="submit"  value="submit" id="edit-profile" class="button-white">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
