--- a/UI/history.html
+++ b/UI/history.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>user|History</title>
+    <title>user|Dashboard</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 </head>
@@ -16,20 +16,23 @@
     <div class="nav-section">
         <div class="row">
             <div class="col-2">
-                <p></p>
+                <p><img src="images/logo-white.png" class="site-logo"></p>
             </div>
-            <div class="col-6">
+            <div class="col-8">
                 <ul>
                     <li>
-                        <a href="#" class="">history</a>
+                        <a href="userDashboard.html" class="">order Now</a>
                     </li>
                     <li>
-                        <a href="userDashboard.html" class="active">order Now</a>
+                        <a href="history.html" class="">history</a>
+                    </li>
+                    <li>
+                        <a href="#" class="">logo out</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-2 user-area">
-                <img src="images/davide-cantelli-148407-unsplash.jpg">
+            <div class="col-1 user-area">
+                <img src="images/davide-cantelli-148407-unsplash.jpg" id="profile-pic">
             </div>
         </div>
 
@@ -84,6 +87,44 @@
     </div>
 </div>
 
+</div>
+<!-- The Modal -->
+<div class="row">
+    <div class="modal" id="profile-modal">
+        <div class="col-4">
+            <P></P>
+        </div>
+        <div class="col-4">
+            <span class="close">&times;</span>
+            <div class="form-area-section">
+                <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-profile">
+                <h1 class="text-white text-large">edit profile</h1>
+                <form method="post" action="">
+                    <div>
+                        <label for="username" class="text-white">username</label>
+                        <input type="text" name="food-name" id="username" class="form-control">
+                    </div>
+                    <div>
+                        <label for="email" class="text-white">E-mail</label>
+                        <input type="text" name="price" id="email" class="form-control">
+                    </div>
+                    <div>
+                        <label for="password" class="text-white">password</label>
+                        <input type="text" name="price" id="password" class="form-control">
+                    </div>
+                    <div>
+                        <label for="profile-image" class="text-white">image</label>
+                        <input type="file" name="food-image" id="profile-image" class="form-control">
+                    </div>
+                    <div>
+                    </div>
+                    <div>
+                        <input type="submit" name="submit"  value="submit" id="submit" class="button-white">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 <!--- the footer section of the app--->
 <div class="footer-section">
