the latest update made

--- a/UI/orderlist.html
+++ b/UI/orderlist.html
@@ -24,7 +24,7 @@
                         <a href="adminDashboard.html" class="">food list</a>
                     </li>
                     <li>
-                        <a href="orderlist.html" class="">orders</a>
+                        <a href="orderlist.html" class="">orders <span class="notifi-class">56</span></a>
                     </li>
                     <li>
                         <a href="#" class="">logo out</a>
@@ -127,7 +127,7 @@
             <P></P>
         </div>
         <div class="col-4">
-            <span class="close">&times;</span>
+            <span class="close" id="close" onclick="closeModal()">&times;</span>
             <div class="form-area-section">
                 <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-profile">
                 <h1 class="text-white text-large">edit profile</h1>
