--- a/UI/userDashboard.html
+++ b/UI/userDashboard.html
@@ -83,7 +83,7 @@
             <P></P>
         </div>
         <div class="col-4">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeModal()">&times;</span>
             <div class="form-area-section">
                 <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-profile">
                 <h1 class="text-white text-large">edit profile</h1>
