--- a/UI/adminDashboard.html
+++ b/UI/adminDashboard.html
@@ -24,7 +24,7 @@
                         <a href="#" class="">food list </a>
                     </li>
                     <li>
-                        <a href="orderlist.html" class="">order</a>
+                        <a href="orderlist.html" class="">orders <span class="notifi-class">56</span></a>
                     </li>
                     <li>
                         <a href="#" class="">logo out</a>
@@ -64,7 +64,7 @@
                         </td>
                         <td><small>price:6200ugx</small></td>
                         <td>
-                            <button class="button-success" >edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger" >Delete</button>
                         </td>
                     </tr>
@@ -79,7 +79,7 @@
                         </td>
                         <td><small>price:900ugx</small></td>
                         <td>
-                            <button class="button-success">edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger">Delete</button>
                         </td>
                     </tr>
@@ -93,7 +93,7 @@
                         </td>
                         <td><small>price:1500ugx</small></td>
                         <td>
-                            <button class="button-success">edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger">Delete</button>
                         </td>
                     </tr>
@@ -108,7 +108,7 @@
                         </td>
                         <td><small>price:3200ugx</small></td>
                         <td>
-                            <button class="button-success">edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger">Delete</button>
                         </td>
                     </tr>
@@ -123,7 +123,7 @@
                         </td>
                         <td><small>price:1200ugx</small></td>
                         <td>
-                            <button class="button-success">edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger">Delete</button>
                         </td>
                     </tr>
@@ -138,7 +138,7 @@
                         </td>
                         <td><small>price:1500ugx</small></td>
                         <td>
-                            <button class="button-success">edit</button>
+                            <button class="button-success" onclick="Editfoodmodal()">edit</button>
                             <button class="button-danger">Delete</button>
                         </td>
                     </tr>
@@ -153,7 +153,7 @@
             <P></P>
         </div>
         <div class="col-4">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeModal()">&times;</span>
             <div class="form-area-section">
                 <img src="images/davide-cantelli-148407-unsplash.jpg" class="image-profile">
                 <h1 class="text-white text-large">edit profile</h1>
@@ -177,7 +177,7 @@
                     <div>
                     </div>
                     <div>
-                        <input type="submit" name="submit"  value="submit" id="submit" class="button-white">
+                        <input type="submit" name="submit"  value="submit" id="submit-profile" class="button-white">
                     </div>
                 </form>
             </div>
@@ -185,16 +185,16 @@
     </div>
 </div>
 <div>
-    <!--- modal boxes for adding food to the list-->
+    <!--- modal boxes for editing food to the list-->
     <div class="row">
-        <div class="modal" id="add-food-modal">
+        <div class="modal" id="edit-food-modal">
             <div class="col-4">
                 <P></P>
             </div>
             <div class="col-4">
-                <span class="close">&times;</span>
+                <span class="close" onclick="closeModal()">&times;</span>
                 <div class="form-area-section">
-                    <h1 class="text-white text-large">add food details here</h1>
+                    <h1 class="text-white text-large">edit food details here</h1>
                     <form method="post" action="">
                         <div>
                             <label for="location" class="text-white">food name</label>
@@ -216,7 +216,7 @@
                         <div>
                         </div>
                         <div>
-                            <input type="submit" name="submit"  value="order now" id="submit" class="button-sunshine-outline-order">
+                            <input type="submit" name="submit"  value="submit" id="submit" class="button-sunshine-outline-order">
                         </div>
                     </form>
                 </div>
