--- a/UI/login.html
+++ b/UI/login.html
@@ -25,6 +25,7 @@
         </div>
         <div class="col-4">
             <div class="form-area-section">
+                <img src="images/logo-colored.png" class="site-logo">
                 <h1 class="text-white text-large">Login</h1>
                 <form method="post" action="">
                     <div>
