made some changes in the master branch

--- a/UI/addfood.html
+++ b/UI/addfood.html
@@ -25,7 +25,7 @@
                         <a href="adminDashboard.html" class="">food list</a>
                     </li>
                     <li>
-                        <a href="orderlist.html" class="">orders</a>
+                        <a href="orderlist.html" class="">orders <span class="notifi-class">56</span></a>
                     </li>
                     <li>
                         <a href="#" class="">logo out</a>
