have made some new changes

--- a/UI/order.html
+++ b/UI/order.html
@@ -21,7 +21,7 @@
             <div class="col-8">
                 <ul>
                     <li>
-                        <a href="#" class="">order Now</a>
+                        <a href="userDashboard.html" class="">order Now</a>
                     </li>
                     <li>
                         <a href="history.html" class="">history</a>
@@ -53,6 +53,11 @@
                             <label for="location" class="text-white">location</label>
                             <input type="location" name="location" id="location" class="form-control">
                         </div>
+                        <div>
+                            <label for="number-of-piece" class="text-white">Number of pieces/plates</label>
+                            <input type="number" name="location" id="number-of-piece" class="form-control">
+                        </div>
+
                         <div>
                             <input type="radio" id="self-delivery"
                                    name="self-delivery" value="self-delivery">
