made some changes and and updates

--- a/UI/orderlist.html
+++ b/UI/orderlist.html
@@ -49,10 +49,11 @@
                     <th style="width:10%;">Meal</th>
                     <th style="width:10%;">ordered by</th>
                     <th style="width:10%;">delivery type</th>
+                    <th style="width:10%">pieces/plates</th>
                     <th style="width:10%;">price</th>
                     <th style="width:10%;">accept</th>
                     <th style="width:10%;">Decline</th>
-                    <th style="width:10%;">completion status</th>
+                    <th style="width:10%;">completion</th>
 
                 </tr>
                 <tr>
@@ -60,6 +61,7 @@
                     <td>Meats and Rices</td>
                     <td>Jef</td>
                     <td> delivered</td>
+                    <td>3</td>
                     <td><small>price:6200ugx</small></td>
                     <td><button id="accept" class="button-success">pending</button></td>
                     <td><button id="Decline" class="button-success">pending</button></td></td>
@@ -70,6 +72,7 @@
                     <td>Brayan mirez</td>
                     <td>Meat Stew</td>
                     <td> pick up</td>
+                    <td>7</td>
                     <td><small>price:900ugx</small></td>
                     <td><button id="accept1" class="button-success">pending</button></td>
                     <td><button id="Decline1" class="button-success">pending</button></td></td>
@@ -80,6 +83,7 @@
                     <td>Teddy Bobs</td>
                     <td>samussa</td>
                     <td>delivered</td>
+                    <td>6</td>
                     <td><small>price:1500ugx</small></td>
                     <td><button id="accept2" class="button-success">pending</button></td>
                     <td><button id="Decline2" class="button-success">pending</button></td></td>
@@ -90,6 +94,7 @@
                     <td>Benson walk</td>
                     <td>nyama choma</td>
                     <td>Pick up</td>
+                    <td>8</td>
                     <td><small>price:3200ugx</small></td>
                     <td><button id="accept3" class="button-success">pending</button></td>
                     <td><button id="Decline3" class="button-success">pending</button></td></td>
@@ -100,6 +105,7 @@
                     <td>Godwin Walker</td>
                     <td>chicken stew</td>
                     <td>Delivered</td>
+                    <td>7</td>
                     <td><small>price:1200ugx</small></td>
                     <td><button id="accept4" class="button-success">pending</button></td>
                     <td><button id="Decline4" class="button-success">pending</button></td></td>
@@ -110,6 +116,7 @@
                     <td>robert Johns</td>
                     <td>Chicken Pizza</td>
                     <td>Pickup</td>
+                    <td>6</td>
                     <td><small>price:1500ugx</small></td>
                     <td><button id="accept5" class="button-success">pending</button></td>
                     <td><button id="Decline5" class="button-success">pending</button></td></td>
