--- a/UI/login.html
+++ b/UI/login.html
@@ -39,6 +39,7 @@
                     <div>
                         <input type="submit" name="submit"  value="register" id="submit" class="button-white text-white">
                     </div>
+                    <p class="text-white"> dont have an account yet<a href="signup.html"> Sign up</a></p>
                 </form>
             </div>
         </div>
