i another new changes

--- a/UI/addfood.html
+++ b/UI/addfood.html
@@ -28,7 +28,7 @@
                         <a href="orderlist.html" class="">orders <span class="notifi-class">56</span></a>
                     </li>
                     <li>
-                        <a href="#" class="">logo out</a>
+                        <a href="login.html" class="">logo out</a>
                     </li>
                 </ul>
             </div>
