--- a/UI/history.html
+++ b/UI/history.html
@@ -27,7 +27,7 @@
                         <a href="history.html" class="">history</a>
                     </li>
                     <li>
-                        <a href="#" class="">logo out</a>
+                        <a href="login.html" class="">logo out</a>
                     </li>
                 </ul>
             </div>
