--- a/UI/order.html
+++ b/UI/order.html
@@ -27,7 +27,7 @@
                         <a href="history.html" class="">history</a>
                     </li>
                     <li>
-                        <a href="#" class="">logo out</a>
+                        <a href="login.html" class="">logo out</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +48,7 @@
             <div class="col-4">
                 <div class="form-area-section">
                     <h1 class="text-white text-large">place your order now</h1>
-                    <form method="post" action="">
+                    <form method="post" action="userDashboard.html">
                         <div>
                             <label for="location" class="text-white">location</label>
                             <input type="location" name="location" id="location" class="form-control">
