--- a/UI/login.html
+++ b/UI/login.html
@@ -27,7 +27,7 @@
             <div class="form-area-section">
                 <img src="images/logo-colored.png" class="site-logo">
                 <h1 class="text-white text-large">Login</h1>
-                <form method="post" action="">
+                <form method="post" action="userDashboard.html">
                     <div>
                         <label for="username" class="text-white">User Name</label>
                         <input type="text" name="username" id="username" class="form-control">
@@ -37,7 +37,7 @@
                         <input type="password" name="userpassword" id="userpassword" class="form-control">
                     </div>
                     <div>
-                        <input type="submit" name="submit"  value="register" id="submit" class="button-white text-white">
+                        <input type="submit" name="submit"  value="login" id="submit" class="button-white text-white">
                     </div>
                     <p class="text-white"> dont have an account yet<a href="signup.html"> Sign up</a></p>
                 </form>
