made some changes on the sign up

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -27,7 +27,7 @@
             <div class="form-area-section">
                 <img src="images/logo-colored.png" class="site-logo">
                 <h1 class="text-white text-large"> create an Account Now</h1>
-                <form method="post" action="">
+                <form method="post" action="userDashboard.html">
                     <div>
                         <label for="username" class="text-white">User Name</label>
                         <input type="text" name="username" id="username" class="form-control">
