--- a/UI/signup.html
+++ b/UI/signup.html
@@ -41,6 +41,10 @@
                         <input type="password" name="userpassword" id="userpassword" class="form-control">
                     </div>
                     <div>
+                        <label for="cfm-password" class="text-white"> confirm password</label>
+                        <input type="password" name="cfm-password" id="cfm-password" class="form-control">
+                    </div>
+                    <div>
                         <input type="submit" name="submit"  value="register" id="submit" class="button-white text-white">
                     </div>
                     <p class="text-white"> already an account please <a href="login.html">Sign in</a></p>
