--- a/UI/login.html
+++ b/UI/login.html
@@ -27,7 +27,7 @@
             <div class="form-area-section">
                 <img src="images/logo-colored.png" class="site-logo">
                 <h1 class="text-white text-large">Login</h1>
-                <form method="POST" action="userDashboard.html">
+                <form method="" action="userDashboard.html">
                     <div>
                         <label for="username" class="text-white">User Name</label>
                         <input type="text" name="username" id="username" class="form-control">
