--- a/UI/signup.html
+++ b/UI/signup.html
@@ -27,7 +27,7 @@
             <div class="form-area-section">
                 <img src="images/logo-colored.png" class="site-logo">
                 <h1 class="text-white text-large"> create an Account Now</h1>
-                <form method="POST" action="userDashboard.html">
+                <form method="" action="">
                     <div>
                         <label for="username" class="text-white">User Name</label>
                         <input type="text" name="username" id="username" class="form-control">
@@ -45,7 +45,7 @@
                         <input type="password" name="cfm-password" id="cfm-password" class="form-control">
                     </div>
                     <div>
-                        <input type="submit" name="submit"  value="register" id="submit" class="button-white text-white">
+                        <button id="submit" class="button-white text-white"><a href="userDashboard.html">register</a></button>
                     </div>
                     <p class="text-white"> already an account please <a href="login.html">Sign in</a></p>
                 </form>
