--- a/UI/login.html
+++ b/UI/login.html
@@ -37,7 +37,7 @@
                         <input type="password" name="userpassword" id="userpassword" class="form-control">
                     </div>
                     <div>
-                        <input type="submit" name="submit"  value="login" id="submit" class="button-white text-white">
+                        <button id="submit" class="button-white text-white"><a href="userDashboard.html">login</a></button>
                     </div>
                     <p class="text-white"> dont have an account yet<a href="signup.html"> Sign up</a></p>
                 </form>
