[Delivers #160216436] finished working on the signed up pages

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -47,7 +47,7 @@
                     <div>
                         <a href="userDashboard.html"><button id="submit" class="button-white text-white">register</button></a>
                     </div>
-                    <p class="text-white"> already an account please <a href="login.html">Sign in</a></p>
+                    <p class="text-white"> already an account please <a href="login.html">sign in</a></p>
                 </form>
             </div>
         </div>
