[Delivers #160216436] finished working on the signed up pages

--- a/UI/login.html
+++ b/UI/login.html
@@ -37,7 +37,7 @@
                         <input type="password" name="userpassword" id="userpassword" class="form-control">
                     </div>
                     <div>
-                        <a href="userDashboard.html"> <button id="submit" class="button-white text-white">login</button></a>
+                        <a href="userDashboard.html"> <button id="submit" class="button-white text-white">sign in</button></a>
                     </div>
                     <p class="text-white"> dont have an account yet<a href="signup.html"> Sign up</a></p>
                 </form>
