[Delivers #160216465] finished working on the order food page  pages

--- a/UI/order.html
+++ b/UI/order.html
@@ -61,10 +61,10 @@
                         <div>
                             <input type="radio" id="self-delivery"
                                    name="self-delivery" value="self-delivery">
-                            <label for="self-delivery">self delivery</label>
+                            <label for="self-delivery">pick up</label>
                             <input type="radio" id="delivered"
                                    name="delivered" value="delivered">
-                            <label for="delivered">delivered</label>
+                            <label for="delivered">delivered </label>
                         </div>
                         <div>
                             <input type="submit" name="submit"  value="order now" id="submit" class="button-sunshine-outline-order">
