[Delivers #160216539 ] finished working on the order history  page  pages

--- a/UI/history.html
+++ b/UI/history.html
@@ -48,7 +48,7 @@
             <div class="col-10">
                 <h3> chicken pizza <small>order on:12/9/2016</small></h3>
                 <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
-                    The CSS box model is essentially a box that wraps around every HTML element.  of: margins, borders, padding, and the actual content. The image below illustrates the box model:
+                    The CSS box model is essentially a box that wraps around TML element.  of: margins, borders, padding, and the actual content. The image below illustrates the box model:
                 </p>
             </div>
     </div>
