[Delivers #160286184 ] finished working on the logo and add it to pages

--- a/UI/userDashboard.html
+++ b/UI/userDashboard.html
@@ -59,7 +59,7 @@
         <div class="col-9">
             <h1> chicken buggers <small>price:2400ugx</small></h1>
             <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
-                The CSS box model is essentially a box that wraps around every HTML element. margins, borders, padding, and the actual content. The image below illustrates the box model:
+                The CSS box model is essentially a box that wraps around every HTML element. margins,  padding, and the actual content. The image below illustrates the box model:
             </p>
             <a href="order.html"><button class="button-sunshine-outline">order now</button></a>
         </div>
