--- a/UI/adminDashboard.html
+++ b/UI/adminDashboard.html
@@ -132,8 +132,8 @@
                         <td>Chicken Pizza</td>
                         <td>
                             web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                            uncover many web sites still in their infancy. Various versions have evolved over the years,
-                            sometimes by accident, sometimes on purpose (injected humour and the like).
+                            uncover many web sites still in their infancy. Various versions have  over the years,
+                            sometimes by accident, sometimes on purpose (injected humour and the li
 
                         </td>
                         <td><small>price:1500ugx</small></td>
