made some changes in the history.html page

--- a/UI/history.html
+++ b/UI/history.html
@@ -43,9 +43,11 @@
     <h1 class="float-center">my order history</h1>
     <div class="row  user-dashboard-content">
             <div class="col-2">
-               <p></p>
+              <p class="padding-par">
+                  <img src="images/thomas-tucker-391058-unsplash.jpg" class="image-circle-2">
+              </p>
             </div>
-            <div class="col-10">
+            <div class="col-8">
                 <h3> chicken pizza <small>order on:12/9/2016</small></h3>
                 <p>All HTML elements can be considered as boxes. In CSS, the term "box model" is used when talking about design and layout.
                     The CSS box model is essentially a box that wraps around TML element.  of: margins, borders, padding, and the actual content. The image below illustrates the box model:
@@ -54,7 +56,9 @@
     </div>
     <div class="row  user-dashboard-content">
         <div class="col-2">
-           <p></p>
+           <p class="padding-par">
+               <img src="images/thomas-tucker-391058-unsplash.jpg" class="image-circle-2">
+           </p>
         </div>
         <div class="col-8">
             <h3> chicken pizza <small>order on:12/9/2016</small></h3>
@@ -65,7 +69,9 @@
     </div>
     <div class="row  user-dashboard-content">
         <div class="col-2">
-            <p></p>
+            <p class="padding-par">
+                <img src="images/thomas-tucker-391058-unsplash.jpg" class="image-circle-2">
+            </p>
         </div>
         <div class="col-8">
             <h3> chicken pizza <small>order on:12/9/2016</small></h3>
@@ -76,7 +82,7 @@
     </div>
     <div class="row  user-dashboard-content">
         <div class="col-2">
-            <p></p>
+            <p class="padding-par"><img src="images/thomas-tucker-391058-unsplash.jpg" class="image-circle-2"></p>
         </div>
         <div class="col-8">
             <h3> chicken pizza <small>order on:12/9/2016</small></h3>
